# fiis-buscador

./: .flake8  .gitignore  Makefile  README.md  buscador.py  constants.py  data.py  fiis_favorites.py  fiis_segments.py  fnet_read.json  main.py  my_fiis_quantities.json  pyproject.toml  requirements.txt  scrape_fiis.py  wanted_fiis.json
.github/workflows/: ci.yml  deploy.yaml
communications/: constants.py  get_communications.py
communications/scrapes/: fnet.py
config/: communications_read.json  settings.py
fiis/: constants.py  get_fiis.py  scrape_fiis.py
fiis/scrapes/: fundamentus.py  investidor10.py
pages/: 1_Comunicados.py  2_comunicados.py  3_distribuicao.py  4_dividendos.py  4_quantidades.py  5_atualizar.py  5_quantidades.py  6_atualizar.py  comunicados.py  distribuicao.py  meus_fiis_distribuicao.py  meus_fiis_quantidades.py  quantidades.py
src/: constants.py  data.py  get_communications.py  get_fiis.py  tickers.py  utils.py
src/scrapes/: all_scrapes.py  fnet.py  fundamentus.py  investidor10.py  ward.py
src/utils/: get_date.py  get_tickers.py
tests/: conftest.py  test_tickers.py  test_utils.py
