[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiis-buscador"
version = "1.0.0"
description = "Projeto para buscar os melhores FIIs para investir e analisá-los pós investimento"
requires-python = ">=3.10,<3.11"
dependencies = [
    "lxml==5.3.0",
    "numpy==1.26.4",
    "pandas==2.0.3",
    "requests==2.32.3",
    "streamlit==1.52.0",
    "beautifulsoup4==4.13.3",
    "tzlocal==5.3.1",
    "selenium==4.31.0",
    "plotly==6.3.1",
]

[project.optional-dependencies]
dev = [
    "watchdog==6.0.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]
lint = [
    "flake8==7.0.0",
    "black==24.4.2",
    "isort==5.13.2",
]

[tool.setuptools]
packages = ["config", "src", "src.utils", "src.scrapes"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | __pycache__
  | downloads
  | \.ipynb_checkpoints
  | .*\.ipynb$
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*.ipynb", "downloads/*", "__pycache__/*"]
